fix first tab having wrong padding

--- a/includes/layout.css
+++ b/includes/layout.css
@@ -22,6 +22,11 @@
     min-width: 0px !important;
     flex: auto !important;
   }
+
+  tabs#tabbrowser-tabs {
+    padding: 0 !important;
+  }
+
 }
 
 tab {
